Using clear + float.

--- a/apuntes/css_float_1.html
+++ b/apuntes/css_float_1.html
@@ -16,20 +16,28 @@
                 height: 50px;
                 text-align: center;
                 font-size: 2em;
+                margin-right: 5px;
 
             }
             #p1{
                 background-color: yellow;
-                float: right;
+                float: left;
+                height: 100px;
             }
             #p2{
                 background-color: green;
+                float: right;
+                height: 150px;
             }
             #p3{
                 background-color: blue;
+                clear: both;
             }
             #p4{
                 background-color: purple;
+            }
+            section{
+                clear:left;
             }
         </style>
     </head>
